src/main/resources/Krakatau-master/tests/assembler/good/ldcs3.j
###preprocess###
.class public LdcTest
.super java/lang/Object

.method public static print : (F)V
    .code stack 910 locals 10
    ldc 'LdcTest'
    ldc_w Class "LdcTest"
###range(253,):
    ldc "{}"
###
        return
    .end code
.end method
.end class
