src/main/resources/Krakatau-master/tests/assembler/bad/duplicatelabels.j
.class public whocares
.super java/lang/Object

.method public static print : (F)V
    .code stack 10 locals 10
        LFOO:
        nop
        LFOO:
        return
    .end code
.end method
.end class
